chore: Sync remaining modified files and utility scripts
- Update app.py reporting logic
- Update .gitignore with storage and log patterns
- Update .env.example with latest configurations
- Add relevant utility and test scripts for guarantees, docker, and regex debugging

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,52 @@
-# Copia este archivo a .env y rellena con tus valores reales
+# ========== DEFENSE RAG SYSTEM - ENVIRONMENT CONFIGURATION ==========
 
-# OpenAI API
-OPENAI_API_KEY=sk-...tu-clave-aqui...
+# ========== REQUIRED ==========
+# OpenAI API Key (required for embeddings and generation)
+OPENAI_API_KEY=sk-your-api-key-here
 
-# Configuración opcional
+# ========== OPTIONAL - HARDWARE OPTIMIZATION ==========
+# GPU Usage (auto | true | false)
+# - auto: Detect GPU automatically (recommended)
+# - true: Force GPU usage (fails if no GPU)
+# - false: Force CPU-only
+USE_GPU=auto
+
+# Re-ranker (true | false)
+# - true: Use BGE-M3 re-ranker (~18s CPU, ~2s GPU)
+# - false: Skip re-ranking, rely on RRF fusion (~0s, -3% accuracy)
+ENABLE_RERANKER=true
+
+# LLM Judge Validation (true | false)
+# - true: Use LLM-as-judge for logical coherence (~5s)
+# - false: Skip LLM judge, use only numerical + citation validation (~0s, minimal impact)
+ENABLE_LLM_JUDGE=true
+
+# ========== OPTIONAL - MODEL CONFIGURATION ==========
+# Embeddings
 EMBEDDING_MODEL=text-embedding-3-large
+
+# Generation Models
 LLM_MODEL=gpt-4o
 LLM_MODEL_MINI=gpt-4o-mini
-TEMPERATURE=0.0
 
-# Paths (ajustar si usas estructura diferente)
-CONTRACTS_DIR=data/contracts
-NORMALIZED_DIR=data/normalized
-VECTOR_DB_DIR=chroma_db
+# ========== OPTIONAL - VECTOR DATABASE ==========
+# Type: chromadb (local) | qdrant (server)
+VECTOR_DB_TYPE=chromadb
+
+# Qdrant Server (only if VECTOR_DB_TYPE=qdrant)
+VECTOR_DB_HOST=vectordb
+VECTOR_DB_PORT=6333
+
+# ========== OPTIONAL - PORTS ==========
+STREAMLIT_PORT=8501
+QDRANT_HTTP_PORT=6333
+QDRANT_GRPC_PORT=6334
+
+# ========== NOTES ==========
+# Copy this file to .env and fill in your values:
+#   cp .env.example .env
+#
+# For production deployment, adjust:
+# - USE_GPU based on server capabilities
+# - ENABLE_RERANKER based on latency requirements
+# - ENABLE_LLM_JUDGE based on accuracy vs speed trade-off
