--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 langchain>=0.3.0
+langchain-community>=0.3.0
 langgraph>=0.2.0
 chromadb>=0.5.0
 sentence-transformers>=2.3.0
@@ -10,3 +11,4 @@ openpyxl>=3.1.2
 python-dotenv>=1.0.0
 markdown>=3.5.0
 openai>=1.0.0
+rank_bm25>=0.2.2
